# swlib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-test.yml
include/sw/: concepts.hpp  debug_formatter.hpp  function.hpp  hash.hpp  macros.hpp  memory.hpp  tuple.hpp  type_id.hpp  type_signature.hpp  type_traits.hpp  types.hpp
src/: library.cpp
test/: CMakeLists.txt  test_concepts.cpp  test_core.cpp  test_debug_formatter.cpp  test_function.cpp  test_hash.cpp  test_memory.cpp  test_tuple.cpp  test_type_id.cpp  test_type_signature.cpp  test_type_traits.cpp  utils.hpp
